--- a/resources/language/English/strings.xml
+++ b/resources/language/English/strings.xml
@@ -30,4 +30,9 @@
     <!--Settings-->
     <string id="30075">RTE</string>
     <string id="30070">Include advertisements</string>
+    
+    <string id="30085">Magnet Web TV</string>
+    <string id="30080">Username</string>
+    <string id="30081">Password</string>
+    
 </strings>
