--- a/plugin.video.vodie/resources/language/English/strings.xml
+++ b/plugin.video.vodie/resources/language/English/strings.xml
@@ -28,8 +28,8 @@
     <string id="30005">Favorites</string>
     
     <!--Settings-->
-    <string id="30075">RTE</string>
-    <string id="30070">Include advertisements</string>
+    <string id="30075">Playing Videos</string>
+    <string id="30070">Include Ads</string>
     
     <string id="30085">Magnet Web TV</string>
     <string id="30080">Username</string>
